# um-modify

./: .gitattributes  .gitignore  README.md  pyproject.toml
.conda/: env_dev.yml  meta.yaml
.github/workflows/: CD.yml  CI.yml  add_to_project.yml
